Fix duplicate closingDay button in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 <select id="closingDay">
   <option value="">選択してください</option>
 </select>
+
+<button onclick="saveClosingDay()">保存</button>
+  <option value="">選択してください</option>
+</select>
   </label>
   <button onclick="saveClosingDay()">保存</button>
 </div>
