Rename button function from addRecord to addEntry

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <input type="date" id="dateInput" required>
   <input type="text" id="amountInput" placeholder="¥0" required>
   <input type="text" id="noteInput" placeholder="我慢した内容">
-  <button onclick="addRecord()">登録</button>
+  <button onclick="addEntry()">登録</button>
 </div>
 
 <h2>今月の合計：<span id="monthlyTotal">¥0</span></h2>
