Change amount input type from text to number

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="form">
   <input type="date" id="dateInput" required>
-  <input type="text" id="amountInput" placeholder="¥0" required>
+  <input type="number" id="amountInput" placeholder="¥0" required>
   <input type="text" id="noteInput" placeholder="我慢した内容">
   <button onclick="addEntry()">登録</button>
 </div>
